# paperXai

./: .gitignore  LICENSE  README.md  config.yml  environment.yml  pyproject.toml  requirements.txt
data/arxiv/: categories.csv
display/: example_report_string.html  report.html  template.html  template.md  webapp.py
display/reports/: 2023-08-04-report.html
docs/: newsletter.avif
notebooks/: example_workflow.ipynb
scripts/: create_arxiv_report.py  get_arxiv_papers.py
src/arxivai/llms/: __init__.py  openai.py
src/paperxai/: constants.py  loading.py
src/paperxai/llms/: __init__.py  base.py  openai.py
src/paperxai/papers/: __init__.py  arxiv.py  arxiv_api.py  base.py  pubmed.py
src/paperxai/prompt/: base.py
src/paperxai/report/: retriever.py
